Mostly done. Some alignment issues with search bar and user alter icon due to grid rules not being implemented consistently. Good enough to show proof of concept.

--- a/style.css
+++ b/style.css
@@ -9,17 +9,17 @@
 
 body {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 75px;
+    grid-template-columns: 1fr 2fr 2fr 2fr;
+    grid-template-rows: 1fr 2fr 2fr 75px;
 }
 
-div {
+/* div {
     border: 1px solid black;
-}
+} */
 
 .left-sidebar {
     display: grid;
-    grid-column: 1 / 1;
+    grid-column: 1 / 2;
     grid-row: 1 / 5;
     color: #ffffff;
     background-color:cornflowerblue;
@@ -46,6 +46,12 @@ div {
     width: 25px;
 }
 
+.avatar {
+    height: 50px;
+    border-radius: 50px;
+    border: 1px solid black;
+}
+
 #bear {
     height: 50px;
 }
@@ -64,35 +70,127 @@ div {
 .left-side,
 .right-side {
     display: grid;
+    align-items: center;
+}
+
+.left-side {
+    justify-content: left;
+    padding-left: 20px;
+}
+
+.right-side {
+    justify-content: right;
+    padding-right: 20px;
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+input {
+    width: 30rem;
+    border-radius: 10px;
+}
+
+.profile{
+    display: grid;
+    grid-template-columns: 50px 1fr 4fr;
+    align-items: center;
+    gap: 10px;
+}
+
+.actions {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
+}
+
+.user {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+}
+
+button {
+    text-align: center;
+    color: white;
+    background-color: cornflowerblue;
+    border-radius: 40px;
+    height: 30px;
+    width: 100px;
+}
+
+.main-content {
+    background-color: lightgray;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-column: 2/5;
+    grid-row: 2/5;
+    display: grid;
+    padding: 20px;
+    gap: 15px;
 }
 
 .projects {
     display: grid;
-    grid-template-rows: 1fr 5fr;
-    grid-column: 2 / 4;
-    grid-row: 2 / 5;
-    border: 1px solid red;
+    grid-row: 1/3;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 9fr;
 }
 
-.projects .title {
-    grid-row: 1/2;
-    border: 4px solid green;
-    color: green;
-}
-
-.projects .cards{
-    color: purple;
-    border: 5px solid purple;
+.cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
-    grid-row: 2 / 7;
+    grid-row: 2/9;
+    grid-column: 1/5;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
+    grid-template-rows: repeat(auto-fit, minmax(50px, 150px));
+    padding-top: 10px;
     gap: 15px;
 }
 
-.project {
-    border-radius: 10px;
+.card {
     border-left: 5px solid orange;
+    background-color: white;
+    border-radius: 10px;
+    display: grid;
+    padding: 15px;
+}
+
+.project {
+    font-weight: bold;
+}
+
+.announcement {
+    background-color: white;
+    display: grid;
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.title {
+    background-color: lightgray;
+    font-weight: bold;
+    color: black;
+    height: 20px;
+    margin-bottom: 10px;
+}
+
+.trending {
+    background-color: white;
+    display: grid;
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.trend {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
 }
 
 .footer {
